--- a/stories/es/0141_el-pollo-y-el-milpiés.html
+++ b/stories/es/0141_el-pollo-y-el-milpiés.html
@@ -70,7 +70,7 @@ Winny Asara<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
 
-<p>Milpiés lanzó el balón e anotó un gol. Milpiés dribló el balón y anotó. Milpiés cabeceó el balón y anotó. Milpiés anotó cinco goles.</p>
+<p>Milpiés lanzó el balón y anotó un gol. Milpiés dribló el balón y anotó. Milpiés cabeceó el balón y anotó. Milpiés anotó cinco goles.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
