--- a/stories/index.html
+++ b/stories/index.html
@@ -5129,10 +5129,40 @@
       <td><a name="ur0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0291</td>
+      <td><a href="/stories/ur/0291_وسی-کی-بہن-نے-کیا-کہا؟_slides.html" target="_blank">وسی کی بہن نے کیا کہا؟</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ur0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0294</td>
+      <td><a href="/stories/ur/0294_دادی-کے-کیلے_slides.html" target="_blank">دادی کے کیلے</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ur0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0296</td>
+      <td><a href="/stories/ur/0296_ٹوم-کیلے-بیچنے-والا_slides.html" target="_blank">ٹوم کیلے بیچنے والا</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ur0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0302</td>
       <td><a href="/stories/ur/0302_آگ_slides.html" target="_blank">آگ</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ur0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0315</td>
+      <td><a href="/stories/ur/0315_سکیما-کا-گانا_slides.html" target="_blank">سکیما کا گانا</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ur0315"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0324</td>
+      <td><a href="/stories/ur/0324_وہ-دن-جب-میں-نے-شہر-کے-لیے-گھر-چھوڑا_slides.html" target="_blank">وہ دن جب میں نے شہر کے لیے گھر چھوڑا</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ur0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0327</td>
@@ -5775,7 +5805,7 @@
       <td>0291</td>
       <td><a href="http://africanstorybook.org/stories/what-vusis-sister-said">What Vusi’s sister said</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0291">ar</a>, <a href="#es0291">es</a>, <a href="#fa0291">fa</a>, <a href="#it0291">it</a>, <a href="#ko0291">ko</a>, <a href="#pa0291">pa</a>, <a href="#pl0291">pl</a>, <a href="#tl0291">tl</a>, <a href="#yue0291">yue</a>, <a href="#zh0291">zh</a></td>
+      <td><a href="#ar0291">ar</a>, <a href="#es0291">es</a>, <a href="#fa0291">fa</a>, <a href="#it0291">it</a>, <a href="#ko0291">ko</a>, <a href="#pa0291">pa</a>, <a href="#pl0291">pl</a>, <a href="#tl0291">tl</a>, <a href="#ur0291">ur</a>, <a href="#yue0291">yue</a>, <a href="#zh0291">zh</a></td>
     </tr>
     <tr>
       <td>0293</td>
@@ -5787,13 +5817,13 @@
       <td>0294</td>
       <td><a href="http://africanstorybook.org/stories/grandma%E2%80%99s-bananas">Grandma’s bananas</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0294">ar</a>, <a href="#es0294">es</a>, <a href="#fa0294">fa</a>, <a href="#it0294">it</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#pa0294">pa</a>, <a href="#pl0294">pl</a>, <a href="#tl0294">tl</a>, <a href="#yue0294">yue</a>, <a href="#zh0294">zh</a></td>
+      <td><a href="#ar0294">ar</a>, <a href="#es0294">es</a>, <a href="#fa0294">fa</a>, <a href="#it0294">it</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#pa0294">pa</a>, <a href="#pl0294">pl</a>, <a href="#tl0294">tl</a>, <a href="#ur0294">ur</a>, <a href="#yue0294">yue</a>, <a href="#zh0294">zh</a></td>
     </tr>
     <tr>
       <td>0296</td>
       <td><a href="http://africanstorybook.org/stories/tom-banana-seller">Tom the banana seller</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0296">ar</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#it0296">it</a>, <a href="#ko0296">ko</a>, <a href="#pa0296">pa</a>, <a href="#pl0296">pl</a>, <a href="#tl0296">tl</a>, <a href="#yue0296">yue</a>, <a href="#zh0296">zh</a></td>
+      <td><a href="#ar0296">ar</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#it0296">it</a>, <a href="#ko0296">ko</a>, <a href="#pa0296">pa</a>, <a href="#pl0296">pl</a>, <a href="#tl0296">tl</a>, <a href="#ur0296">ur</a>, <a href="#yue0296">yue</a>, <a href="#zh0296">zh</a></td>
     </tr>
     <tr>
       <td>0302</td>
@@ -5829,7 +5859,7 @@
       <td>0315</td>
       <td><a href="http://africanstorybook.org/stories/sakima%E2%80%99s-song">Sakima’s song</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0315">ar</a>, <a href="#es0315">es</a>, <a href="#fa0315">fa</a>, <a href="#it0315">it</a>, <a href="#ko0315">ko</a>, <a href="#no0315">no</a>, <a href="#pa0315">pa</a>, <a href="#pl0315">pl</a>, <a href="#tl0315">tl</a>, <a href="#yue0315">yue</a>, <a href="#zh0315">zh</a></td>
+      <td><a href="#ar0315">ar</a>, <a href="#es0315">es</a>, <a href="#fa0315">fa</a>, <a href="#it0315">it</a>, <a href="#ko0315">ko</a>, <a href="#no0315">no</a>, <a href="#pa0315">pa</a>, <a href="#pl0315">pl</a>, <a href="#tl0315">tl</a>, <a href="#ur0315">ur</a>, <a href="#yue0315">yue</a>, <a href="#zh0315">zh</a></td>
     </tr>
     <tr>
       <td>0319</td>
@@ -5847,7 +5877,7 @@
       <td>0324</td>
       <td><a href="http://africanstorybook.org/stories/day-i-left-home-city">The day I left home for the city</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0324">ar</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#it0324">it</a>, <a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#pl0324">pl</a>, <a href="#tl0324">tl</a>, <a href="#vi0324">vi</a>, <a href="#yue0324">yue</a>, <a href="#zh0324">zh</a></td>
+      <td><a href="#ar0324">ar</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#it0324">it</a>, <a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#pl0324">pl</a>, <a href="#tl0324">tl</a>, <a href="#ur0324">ur</a>, <a href="#vi0324">vi</a>, <a href="#yue0324">yue</a>, <a href="#zh0324">zh</a></td>
     </tr>
     <tr>
       <td>0327</td>
