--- a/stories/ur/0291_وسی-کی-بہن-نے-کیا-کہا؟_slides.html
+++ b/stories/ur/0291_وسی-کی-بہن-نے-کیا-کہا؟_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>دادی کے کیلے - Global African Storybook</title>
+  <title>وسی کی بہن نے کیا کہا؟ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="دادی-کے-کیلے" class="slide level1">
-<h1>دادی کے کیلے</h1>
+<section id="وسی-کی-بہن-نے-کیا-کہا" class="slide level1">
+<h1>وسی کی بہن نے کیا کہا؟</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
-<p>دادی کا باغ بہت حیرت انگیز، سورغم، باجرے اور کساوا سے بھرا تھا۔ لیکن اُن سب سے بہترین کیلے تھے۔حالانکہ دادی کے کئی پوتے پوتیاں تھے، لیکن مجھے یہ راز معلوم تھا کہ میں دادی کا سب سے پسندیدہ ہوں۔ وہ اکثر مجھے اپنے گھر پہ مدعو کرتی تھیں۔ وہ مجھے چھوٹے موٹے راز بھی بتاتیں۔لیکن ایک ایسا راز تھا جو اُنہوں نے مجھے نہیں بتایا کہ اُنہوں نے کیلے پکنے کے لیے کہاں رکھے ہیں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/02.jpg" /></p>
+<p>ایک صبح وسی کی نانی نے اُسے بلایا، وسی، مہربانی کر کے یہ انڈہ اپنے امی ابو کے پاس لے جاو۔ وہ تمہاری بہن کی شادی کے لیے ایک بڑا کیک بنانا چاہتے ہیں۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
-<p>ایک دن میں نے دادی کے گھر کے باہر ایک ٹوکری کو سورج کی روشنی میں پڑے ہوئے دیکھا۔ جب میں نے پوچھا کہ یہ کس لیے ہے تو مجھے صرف یہ جو اب ملا کہ یہ میری جادوئی ٹوکری ہے۔ ٹوکری سے آگے کئی کیلوں کے پتے پڑے تھے جو دادی کچھ کچھ دیر بعد پلٹ دیتیں۔ میں تجسس میں تھا کہ یہ پتے کس لیے ہیں؟ مجھے صرف یہ جو اب ملا کہ یہ میرے جادوئی پتے ہیں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/03.jpg" /></p>
+<p>اپنے والدین کی طرف جاتے ہوئے، وسی دو لڑکوں سے ملا جو کہ پھل چُن رہے تھے۔ ایک لڑکے نے وسی سے انڈہ کھینچا اور درخت پر دے مارا۔ انڈا ٹوٹ گیا۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
-<p>دادی کو، کیلوں کو، کیلوں کے پتوں کو اور اُس بڑی ٹوکری کو دیکھنا بہت دلچسپ تھا۔لیکن دادی نے مجھے امی کے پاس واپس جانے کو کہا۔ دادی میں آپ سے درخواست کرتا ہوں کہ مجھے یہ سب دیکھنے دیں جیسے آپ تیار کر رہی ہیں۔ڈھیٹ مت بنو، بچے، ویسا کرو جیسا تمہیں کہا گیا ہے۔اُن کے اصرار کرنے پر میں بھاگنے لگا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/04.jpg" /></p>
+<p>یہ تم نے کیا کیا؟ وسی رویا! ۔ یہ انڈہ کیک کے لیے تھا۔ کیک میری بہن کی شادی کے لیے تھا۔ میری بہن کیا کہے گی اگر اُس کی شادی پر کیک نہ ہوا؟</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
-<p>جب میں واپس آیا نہ دادی اور نہ ہی ٹوکری موجود تھی۔ دادی ٹوکری کہاں ہے سارے کیلے کہاں ہیں اور کہاں۔۔۔۔۔۔۔ لیکن مجھے صرف یہ جو اب ملا کہ وہ سب میری جادوئی جگہ میں ہیں۔یہ سب بہت مایوس کن تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
+<p>لڑےوسی کو چھیڑنے کے لیے شرمندہ تھے۔ ہم تمہیں مدد کیک کے لیے تو نہیں کر سکتے، لیکن یہ چلنے کے لیے لکڑی تمہاری بہن کے لیے رکھ لو۔ ایک لڑکے نے کہا۔وسی نے سفر جاری رکھا۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
-<p>دو دن بعد دادی نے مجھے اپنے کمرے سے اپنی چلنے والی لکڑی اُٹھانے کے لیے بھیجا ۔ جلد از جلد میں نے دروازہ کھولا تو خوب پکے ہوئے کیلوں کی خوشبو نے میرا استقبال کیا۔اندرونی کمرے میں دادی کا بڑا جادو تھا جو کہ وہ ٹوکری تھی۔ وہ ایک پرانے کمبل کی مدد سے بہت اچھی طرح چھپائی گئی تھی۔ میں نے اُسے اُٹھایا اور اُس کی بے مثال خوشبو سے محضوز ہوا ۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/06.jpg" /></p>
+<p>راستے میں وہ دو مردوں سے ملا جو کہ گھر تعمیر کر رہے تھے۔ کیا ہم یہ مضبوط لکڑی استعمال کر سکتے ہیں؟ ایک نے پوچھا؟ لیکن لکڑی گھر تعمیر کرنے کے لیے اتنی مضبوط نہ تھی اور وہ ٹوٹ گئی۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
-<p>دادی کی آواز نے مجھے چوکنا کر دیا، تم کیا کر رہے ہو؟ جلدی میری لکڑی لے کر آو۔ میں تیزی سے اُن کی لکڑی لے کر پہنچا ۔ تم کس وجہ سے مسکرا رہے ہوَ؟ دادی نے پوچھا؟ اُن کے اس سوال نے مجھے احساس دلایا کہ میں اب بھی اُن کی جادوئی جگہ کو ایجاد کرنے پر مسکرا رہا ہوں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
+<p>یہ تم نے کیا کیا؟ وسی رویا! یہ لکڑی میری بہن کا تحفہ تھا۔ پھل چننے والوں نے مجھے یہ تحفہ دیا کیونکہ اُنہوں نے کیک کے لیے انڈہ توڑ دیا۔ کیک میری بہن کی شادی کے لیے تھا۔ اب میرے پاس نہ انڈہ ہے، نہ کیک اور نہ ہی کوئی تحفہ۔میری بہن کیا کہے گی؟</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
-<p>اگلے دن جب دادی میری امی سے ملنے آئیں۔ میں بھاگتے ہوئے اُن کے گھر پہنچا تاکہ ایک بار پھر کیلوں کو دیکھ سکوں۔وہاں پر پکے ہوئے کیلوں کا ایک گھچا مو جو د تھا میں نے اُسے اُٹھایا اور اپنے کپڑوں میں چھپا لیا۔ ٹوکری کو دوبارہ ڈھانپنے کے بعد میں گھر کے پیچھے گیا اور جلدی سے کیلے کھا لیے۔آج سے پہلے میں نے اتنے لزیز اور رسیلے کیلے کبھی نہیں کھائے تھے۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
+<p>تعمیر کرنے والے لکڑی توڑنے پر شرمندہ ہوئے۔ ہم تمہاری مدد کیک کے لیے نہیں کر سکتے۔ لیکن تمہاری بہن کے لیے کچھ گھاس ہے۔ ایک نے کہا۔اور وسی نے اپناسفر جاری رکھا۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
-<p>اگلے دن جب دادی باغ میں سبزی چُن رہی تھیں میں نے کیلوں کو دیکھا۔ تقریباً سب پک چکے تھے۔ چار کیلوں کا ایک گچھا اُٹھائے بغیر مجھ سے رہا نہیں گیا۔ میں آہستہ آہستہ دروازے کی طرف بڑھ رہا تھا تو میں نے دادی کے کھانسنے کی آواز سُنی۔ میں نے کیلوں کو اپنے لباس میں چھپانے کی کو شش کی اور اُن کے پاس سے گزر گیا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/09.jpg" /></p>
+<p>راستے میں، وسی ایک کسان اور ایک گائے سے ملا۔ کیا لذیزکھاس ہے؟ کیا مجھے ایک گٹھی مل سکتی ہے؟ گائے نے پوچھا۔ لیکن گھاس اتنا مزیدار تھا کہ گائے سارا کھا گئی۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
-<p>اگلا دن بازار جانے کا دن تھا۔ دادی جلدی اُتھ گئیں۔ وہ ہمیشہ کیلے اور کساوے بازار بیچنے لے جاتیں۔ اُس دن میں اُن سے ملنے کی جلدی میں نہیں تھا لیکن میں اُنہیں زیا دہ دیر کے لیے چھوڑ نہ سکا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
+<p>یہ تم نے کیا کیا؟ وسی رویا! وہ گھاس میری بہن کے لیے تحفہ تھا۔ تعمیر کرنے والوں نے مجھے وہ کھاس دیا کیونکہ اُنہوں نے پھل چننے والوں کی دی ہوئی لکڑی توڑ دی۔پھل چننے والوں نے مجھے وہ لکڑی دی کیونکہ اُنہوں نے وہ انڈا توڑ دیا جو میری بہن کی شادی کے کیک کے لیے تھا۔ اور کیک میری بہن کی شادی کے لیے تھا۔ اب نہ میرے پاس انڈہ ہے، یہ کیک ہے، نہ ہی تحفہ ۔ میری بہن کیا کہے گی؟</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
-<p>اُس شام بعد میں، مجھے میرے امی ابو اور دادی نے بلایا ۔ میں جانتا تھا۔ اُس رات جیسے ہی میں سونے کے لیے لیٹا میں جانتا تھا کہ میں دوبارہ چوری نہیں کروں گا، نہ دادی کے گھر سے، نہ ماں باپ کے گھر سے اور نہ ہی کہیں اور سے۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/11.jpg" /></p>
+<p>گائے اپنے لالچی پن پر بہت شرمندہ ہوئی۔ کسان اس بات پر راضی ہوگیا کہ گائے وسی کے ساتھ بطور تحفہ جائے گی۔ اور اس طرح وسی نے اپنا سفر جاری رکھا۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,12 +186,39 @@
 </section>
 <section class="slide level1">
 
-<h2 id="دادی-کے-کیلے-1">دادی کے کیلے</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/12.jpg" /></p>
+<p>لیکن گائے بھاگتی ہوئی کسان کے پاس آئی کیونکہ وہ کھانے کا وقت تھا اور وسی اپنے سفر میں کہیں کھو گیا۔ وہ اپنی بہن کی شادی پر بہت دیر سے پہنچا۔ مہمان پہلے ہی کھانا کھا رہے تھے ۔</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/13.jpg" /></p>
+<p>اب میں کیا کروں؟ وسی رویا! وہ گائے جو بھاگ گئی ایک تحفہ تھی اُس گھاس کے بدے جو مجھے تعمیر کرنے والوں نے دیا ۔ تعمیر کرنے والوں نے مجھے وہ گھاس اس لیے دیا کیونکہ اُنہوں نے مجھے پھل چننے والوں کی طرف سے دی گئی لکڑی کو توڑ دیا تھا۔پھل چننے والوں نے مجھے وہ لکڑی اس لیے دی کیونکہ اُنہوں نے کیک کے لیے انڈا توڑ دیا تھا۔ کیک شادی کے لیے تھا۔ اب نہ انڈہ ہے، نہ کیک اور نہ ہی کوئی تحفہ۔</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/14.jpg" /></p>
+<p>وسی کی بہن نے تھوڑی دیر کے لیے سوچا۔ پھر اُس نے کہا وسی میرے بھائی مجے تمہارے تحفوں کی واقعی کوئی پرواہ نہیں ہے نہ ہی مجھے اُس کیک کی پرواہ ہے۔ ہم سب یہاں اکٹھے ہیں، میں خوش ہوں۔اب جا کر اپنے اچھے سے کپڑے پہنو، چلوآج کے دن کی خوشیاں مناتے ہیں! اور یہی وسی نے کیا</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="وسی-کی-بہن-نے-کیا-کہا-1">وسی کی بہن نے کیا کہا؟</h2>
+<strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/grandma%E2%80%99s-bananas'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/what-vusis-sister-said'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
