--- a/stories/ur/0294_دادی-کے-کیلے.html
+++ b/stories/ur/0294_دادی-کے-کیلے.html
@@ -49,70 +49,70 @@ Ursula Nafula<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
 
-<p>دادا کا باغ حیرت انگیز تھا، سورج، باجرا اور کاساوا سے بھرا ہوا تھا۔ لیکن سب سے بہتر کیلے تھے۔ اگرچہ دادی بہت سے پوتے تھے، میں نے خفیہ طور پر جانتا تھا کہ میں اس کا پسندیدہ تھا۔ اس نے مجھے اکثر اپنے گھر میں مدعو کیا۔ اس نے مجھے کچھ راز بھی بتایا۔ لیکن وہ ایک راز تھا جس نے میرے ساتھ اشتراک نہیں کیا تھا: وہ کہاں کیلے پکڑا۔</p>
+<p>دادی کا باغ بہت حیرت انگیز، سورغم، باجرے اور کساوا سے بھرا تھا۔ لیکن اُن سب سے بہترین کیلے تھے۔حالانکہ دادی کے کئی پوتے پوتیاں تھے، لیکن مجھے یہ راز معلوم تھا کہ میں دادی کا سب سے پسندیدہ ہوں۔ وہ اکثر مجھے اپنے گھر پہ مدعو کرتی تھیں۔ وہ مجھے چھوٹے موٹے راز بھی بتاتیں۔لیکن ایک ایسا راز تھا جو اُنہوں نے مجھے نہیں بتایا کہ اُنہوں نے کیلے پکنے کے لیے کہاں رکھے ہیں۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
 
-<p>ایک دن میں نے دادی کے گھر کے باہر سورج میں رکھی ایک بڑے پٹا ٹوکری دیکھا۔ جب میں نے پوچھا کہ یہ کیا تھا، صرف ایک ہی جواب تھا، “یہ میرا جادو ٹوکری ہے۔” ٹوکری کے پیچھے، وہاں کئی کیلے کے پتے تھے کہ دادی سے وقت گزر گیا۔ میں جاننا چاہتا تھا۔ میں نے پوچھا “دادا کیا ہیں، دادی؟” صرف ایک ہی جواب تھا، “وہ میری جادو پتی ہیں۔”</p>
+<p>ایک دن میں نے دادی کے گھر کے باہر ایک ٹوکری کو سورج کی روشنی میں پڑے ہوئے دیکھا۔ جب میں نے پوچھا کہ یہ کس لیے ہے تو مجھے صرف یہ جو اب ملا کہ یہ میری جادوئی ٹوکری ہے۔ ٹوکری سے آگے کئی کیلوں کے پتے پڑے تھے جو دادی کچھ کچھ دیر بعد پلٹ دیتیں۔ میں تجسس میں تھا کہ یہ پتے کس لیے ہیں؟ مجھے صرف یہ جو اب ملا کہ یہ میرے جادوئی پتے ہیں۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
 
-<p>یہ دادی، کیلے، کیلے کی پتیوں اور بڑی اسکی ٹوکری بہت دلچسپ لگ رہی تھی۔ لیکن دادی نے میری ماں کو ایک غلطی پر بھیجا۔ “دادی، برائے مہربانی، مجھے دیکھتے ہیں جیسے آپ تیار کریں ۔۔۔” “ضد نہ کرو، بچہ، جیسا کہ آپ کو کہا جاتا ہے،” وہ زور دیتے ہیں۔ میں چل رہا تھا۔</p>
+<p>دادی کو، کیلوں کو، کیلوں کے پتوں کو اور اُس بڑی ٹوکری کو دیکھنا بہت دلچسپ تھا۔لیکن دادی نے مجھے امی کے پاس واپس جانے کو کہا۔ دادی میں آپ سے درخواست کرتا ہوں کہ مجھے یہ سب دیکھنے دیں جیسے آپ تیار کر رہی ہیں۔ڈھیٹ مت بنو، بچے، ویسا کرو جیسا تمہیں کہا گیا ہے۔اُن کے اصرار کرنے پر میں بھاگنے لگا۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
 
-<p>جب میں واپس آیا تو دادی باہر بیٹھا تھا لیکن نہ ہی ٹوکری اور کیلے کے ساتھ۔ “دادی، کہاں ٹوکری ہے، تمام کیلے کہاں ہیں، اور کہاں ۔۔۔” لیکن صرف ایک ہی جواب تھا، “وہ میری جادو جگہ میں ہیں۔” ​​یہ بہت مایوس کن تھا!</p>
+<p>جب میں واپس آیا نہ دادی اور نہ ہی ٹوکری موجود تھی۔ دادی ٹوکری کہاں ہے سارے کیلے کہاں ہیں اور کہاں۔۔۔۔۔۔۔ لیکن مجھے صرف یہ جو اب ملا کہ وہ سب میری جادوئی جگہ میں ہیں۔یہ سب بہت مایوس کن تھا۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
 
-<p>دو دن بعد، دادی نے مجھے اپنے بیڈروم سے اس کی چھڑی چھڑی لینے کے لئے بھیجا۔ جیسے ہی میں نے دروازے کھول دیا، میں نے کیلے پکانے کی مضبوط بو کی طرف سے خیر مقدم کیا۔ اندرونی کمرہ میں دادی کی بڑی جادو اسٹور کی ٹوکری تھی۔ یہ ایک پرانی کمبل کی طرف سے پوشیدہ تھا۔ میں نے اسے اٹھایا اور اس کی شاندار بوسہ لگا دی۔</p>
+<p>دو دن بعد دادی نے مجھے اپنے کمرے سے اپنی چلنے والی لکڑی اُٹھانے کے لیے بھیجا ۔ جلد از جلد میں نے دروازہ کھولا تو خوب پکے ہوئے کیلوں کی خوشبو نے میرا استقبال کیا۔اندرونی کمرے میں دادی کا بڑا جادو تھا جو کہ وہ ٹوکری تھی۔ وہ ایک پرانے کمبل کی مدد سے بہت اچھی طرح چھپائی گئی تھی۔ میں نے اُسے اُٹھایا اور اُس کی بے مثال خوشبو سے محضوز ہوا ۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
 
-<p>جب دادا نے کہا، دادی کی آواز نے مجھ پر زور دیا، “تم کیا کر رہے ہو؟ جلدی جلدی کرو اور مجھے چھڑی لائیں۔ “میں نے اس کی چھڑی چھڑی سے جلدی سے باہر نکالا۔ دادی نے پوچھا “کیا تم مسکرا رہے ہو؟” اس کے سوال نے مجھے احساس کیا کہ میں اب بھی اس کے جادو جگہ کی تلاش میں مسکرا رہا تھا۔</p>
+<p>دادی کی آواز نے مجھے چوکنا کر دیا، تم کیا کر رہے ہو؟ جلدی میری لکڑی لے کر آو۔ میں تیزی سے اُن کی لکڑی لے کر پہنچا ۔ تم کس وجہ سے مسکرا رہے ہوَ؟ دادی نے پوچھا؟ اُن کے اس سوال نے مجھے احساس دلایا کہ میں اب بھی اُن کی جادوئی جگہ کو ایجاد کرنے پر مسکرا رہا ہوں۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
 
-<p>مندرجہ ذیل دن جب دادی میرے ماں سے ملنے آئے تو، میں نے ایک بار پھر کیلے کو چیک کرنے کے لئے اپنے گھر پہنچ گئے۔ بہت پکا ہوا کا ایک گروپ تھا۔ میں نے ایک اٹھایا اور اسے اپنی پوشاک میں چھپایا۔ پھر ٹوکری کو ڈھکنے کے بعد، میں گھر کے پیچھے گیا اور جلدی کھایا۔ یہ سب سے پیاری کیلے تھا جو میں نے کبھی چکھا تھا۔</p>
+<p>اگلے دن جب دادی میری امی سے ملنے آئیں۔ میں بھاگتے ہوئے اُن کے گھر پہنچا تاکہ ایک بار پھر کیلوں کو دیکھ سکوں۔وہاں پر پکے ہوئے کیلوں کا ایک گھچا مو جو د تھا میں نے اُسے اُٹھایا اور اپنے کپڑوں میں چھپا لیا۔ ٹوکری کو دوبارہ ڈھانپنے کے بعد میں گھر کے پیچھے گیا اور جلدی سے کیلے کھا لیے۔آج سے پہلے میں نے اتنے لزیز اور رسیلے کیلے کبھی نہیں کھائے تھے۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
 
-<p>مندرجہ ذیل دن، جب دادی باغ میں سبزیوں کا انتخاب کرتے تھے تو میں نے کیلے میں کھینچ کر کھینچ لیا۔ تقریبا تمام پکا ہوا تھا۔ میں چار کا ایک گروپ لینے میں مدد نہیں کر سکا۔ جیسا کہ میں نے دروازے کی طرف اشارہ کیا، میں نے دادی ماں باہر کھینچ کر سنا۔ میں نے صرف اپنے کپڑے کے نیچے کیلے کو چھپانے میں مدد کی اور اس سے پہلے چلے گئے۔</p>
+<p>اگلے دن جب دادی باغ میں سبزی چُن رہی تھیں میں نے کیلوں کو دیکھا۔ تقریباً سب پک چکے تھے۔ چار کیلوں کا ایک گچھا اُٹھائے بغیر مجھ سے رہا نہیں گیا۔ میں آہستہ آہستہ دروازے کی طرف بڑھ رہا تھا تو میں نے دادی کے کھانسنے کی آواز سُنی۔ میں نے کیلوں کو اپنے لباس میں چھپانے کی کو شش کی اور اُن کے پاس سے گزر گیا۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
 
-<p>مندرجہ ذیل دن مارکیٹ کا دن تھا۔ دادی جلد اٹھی۔ اس نے مارکیٹ میں فروخت کرنے کے لئے ہمیشہ پائپ کیلے اور کیساوا لیا۔ میں نے اس دن اس کا دورہ کرنے کے لئے جلدی نہیں کیا۔ لیکن میں طویل عرصے تک اس سے بچ نہیں سکتا تھا۔</p>
+<p>اگلا دن بازار جانے کا دن تھا۔ دادی جلدی اُتھ گئیں۔ وہ ہمیشہ کیلے اور کساوے بازار بیچنے لے جاتیں۔ اُس دن میں اُن سے ملنے کی جلدی میں نہیں تھا لیکن میں اُنہیں زیا دہ دیر کے لیے چھوڑ نہ سکا۔</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
 
-<p>اس شام کے بعد مجھے اپنی ماں اور باپ اور دادی کی طرف سے بلایا گیا تھا۔ مجھے پتہ تھا کیوں۔ اس رات جب میں سو گیا تو مجھے پتہ تھا کہ میں کبھی بھی چوری نہیں کر سکتا، دادی سے نہیں، میرے والدین سے نہیں، اور یقینی طور پر کسی اور سے نہیں۔</p>
+<p>اُس شام بعد میں، مجھے میرے امی ابو اور دادی نے بلایا ۔ میں جانتا تھا۔ اُس رات جیسے ہی میں سونے کے لیے لیٹا میں جانتا تھا کہ میں دوبارہ چوری نہیں کروں گا، نہ دادی کے گھر سے، نہ ماں باپ کے گھر سے اور نہ ہی کہیں اور سے۔</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
