--- a/stories/ur/0315_سکیما-کا-گانا_slides.html
+++ b/stories/ur/0315_سکیما-کا-گانا_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>دادی کے کیلے - Global African Storybook</title>
+  <title>سکیما کا گانا - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="دادی-کے-کیلے" class="slide level1">
-<h1>دادی کے کیلے</h1>
+<section id="سکیما-کا-گانا" class="slide level1">
+<h1>سکیما کا گانا</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
-<p>دادی کا باغ بہت حیرت انگیز، سورغم، باجرے اور کساوا سے بھرا تھا۔ لیکن اُن سب سے بہترین کیلے تھے۔حالانکہ دادی کے کئی پوتے پوتیاں تھے، لیکن مجھے یہ راز معلوم تھا کہ میں دادی کا سب سے پسندیدہ ہوں۔ وہ اکثر مجھے اپنے گھر پہ مدعو کرتی تھیں۔ وہ مجھے چھوٹے موٹے راز بھی بتاتیں۔لیکن ایک ایسا راز تھا جو اُنہوں نے مجھے نہیں بتایا کہ اُنہوں نے کیلے پکنے کے لیے کہاں رکھے ہیں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/02.jpg" /></p>
+<p>سکیما اپنے والدین اور اپنی چار سالہ بہن کے ساتھ رہتا تھا۔ وہ ایک امیر آدمی کی زمین پر رہتے تھے۔اُن کی گھاس سے بنی کوئی جھونپڑی، درختوں کی قطار میں سب سے آخر پر تھی۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
-<p>ایک دن میں نے دادی کے گھر کے باہر ایک ٹوکری کو سورج کی روشنی میں پڑے ہوئے دیکھا۔ جب میں نے پوچھا کہ یہ کس لیے ہے تو مجھے صرف یہ جو اب ملا کہ یہ میری جادوئی ٹوکری ہے۔ ٹوکری سے آگے کئی کیلوں کے پتے پڑے تھے جو دادی کچھ کچھ دیر بعد پلٹ دیتیں۔ میں تجسس میں تھا کہ یہ پتے کس لیے ہیں؟ مجھے صرف یہ جو اب ملا کہ یہ میرے جادوئی پتے ہیں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/03.jpg" /></p>
+<p>جب سکیما تین سال کا تھا تو وہ بیمار ہو گیا اور اُس نے اپنی بینائی کھو دی۔سکیما ایک ہنرمند لڑکا تھا۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
-<p>دادی کو، کیلوں کو، کیلوں کے پتوں کو اور اُس بڑی ٹوکری کو دیکھنا بہت دلچسپ تھا۔لیکن دادی نے مجھے امی کے پاس واپس جانے کو کہا۔ دادی میں آپ سے درخواست کرتا ہوں کہ مجھے یہ سب دیکھنے دیں جیسے آپ تیار کر رہی ہیں۔ڈھیٹ مت بنو، بچے، ویسا کرو جیسا تمہیں کہا گیا ہے۔اُن کے اصرار کرنے پر میں بھاگنے لگا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/04.jpg" /></p>
+<p>سکیما نے بہت سے ایسے کام کیے جو باقی چھ سالہ لڑکے نہیں کر سکتے تھے۔ مثال کے طور پر، وہ اپنے گاوں کے بڑے بزرگ ممبران کے ساتھ بیٹھتا اور ضروری معملات کے بارے میں بات چیت کرتا۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
-<p>جب میں واپس آیا نہ دادی اور نہ ہی ٹوکری موجود تھی۔ دادی ٹوکری کہاں ہے سارے کیلے کہاں ہیں اور کہاں۔۔۔۔۔۔۔ لیکن مجھے صرف یہ جو اب ملا کہ وہ سب میری جادوئی جگہ میں ہیں۔یہ سب بہت مایوس کن تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/05.jpg" /></p>
+<p>سکیما کے والدین امیر آدمی کے گھر پر کام کرتے تھے۔ وہ صبح سویرے جلدی گھر سے چلے جاتے اور شام دیر سے گھر واپس آتے۔سکیما اپنی چھوٹی بہن کے ساتھ رہتا۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
-<p>دو دن بعد دادی نے مجھے اپنے کمرے سے اپنی چلنے والی لکڑی اُٹھانے کے لیے بھیجا ۔ جلد از جلد میں نے دروازہ کھولا تو خوب پکے ہوئے کیلوں کی خوشبو نے میرا استقبال کیا۔اندرونی کمرے میں دادی کا بڑا جادو تھا جو کہ وہ ٹوکری تھی۔ وہ ایک پرانے کمبل کی مدد سے بہت اچھی طرح چھپائی گئی تھی۔ میں نے اُسے اُٹھایا اور اُس کی بے مثال خوشبو سے محضوز ہوا ۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/06.jpg" /></p>
+<p>سکیما کو گانے گانا بہت پسند تھا۔ ایک دن اُس کی ماں نے پوچھا سکیما تم یہ گانے کہاں سے سیکھتے ہو؟</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
-<p>دادی کی آواز نے مجھے چوکنا کر دیا، تم کیا کر رہے ہو؟ جلدی میری لکڑی لے کر آو۔ میں تیزی سے اُن کی لکڑی لے کر پہنچا ۔ تم کس وجہ سے مسکرا رہے ہوَ؟ دادی نے پوچھا؟ اُن کے اس سوال نے مجھے احساس دلایا کہ میں اب بھی اُن کی جادوئی جگہ کو ایجاد کرنے پر مسکرا رہا ہوں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/07.jpg" /></p>
+<p>سکیما نے جو اب دیا، یہ مجھے ایسے ہی آجاتے ہیں امی۔ میں انہیں اپنے دماغ میں سُننتا ہوں اور پھر میں گاتا ہوں۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
-<p>اگلے دن جب دادی میری امی سے ملنے آئیں۔ میں بھاگتے ہوئے اُن کے گھر پہنچا تاکہ ایک بار پھر کیلوں کو دیکھ سکوں۔وہاں پر پکے ہوئے کیلوں کا ایک گھچا مو جو د تھا میں نے اُسے اُٹھایا اور اپنے کپڑوں میں چھپا لیا۔ ٹوکری کو دوبارہ ڈھانپنے کے بعد میں گھر کے پیچھے گیا اور جلدی سے کیلے کھا لیے۔آج سے پہلے میں نے اتنے لزیز اور رسیلے کیلے کبھی نہیں کھائے تھے۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/08.jpg" /></p>
+<p>سکیما کو اپنی چھوٹی بہن کے لیے گانا پسند تھا، خاص طور پر جب وہ بھوک محسوس کرتی تھی۔ اُس کی بہن اُسے اپنا پسندیدہ گانا گاتے ہوئے سنتی اور اُس کی پر سکون دھن پر جھوم اُٹھتی۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
-<p>اگلے دن جب دادی باغ میں سبزی چُن رہی تھیں میں نے کیلوں کو دیکھا۔ تقریباً سب پک چکے تھے۔ چار کیلوں کا ایک گچھا اُٹھائے بغیر مجھ سے رہا نہیں گیا۔ میں آہستہ آہستہ دروازے کی طرف بڑھ رہا تھا تو میں نے دادی کے کھانسنے کی آواز سُنی۔ میں نے کیلوں کو اپنے لباس میں چھپانے کی کو شش کی اور اُن کے پاس سے گزر گیا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/09.jpg" /></p>
+<p>سکیما کیا یہ تم بار بار گا سکتے ہو؟ اُس کی بہن اُس کی منت کرتی۔ سکیما اُس کی بات مانتا اور بار بار گاتا۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
-<p>اگلا دن بازار جانے کا دن تھا۔ دادی جلدی اُتھ گئیں۔ وہ ہمیشہ کیلے اور کساوے بازار بیچنے لے جاتیں۔ اُس دن میں اُن سے ملنے کی جلدی میں نہیں تھا لیکن میں اُنہیں زیا دہ دیر کے لیے چھوڑ نہ سکا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/10.jpg" /></p>
+<p>ایک شام جب اُس کے والدین گھر آئے وہ بہت خاموش تھے۔ سکیما جانتا تھا کہ کچھ غلط ہے ۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
-<p>اُس شام بعد میں، مجھے میرے امی ابو اور دادی نے بلایا ۔ میں جانتا تھا۔ اُس رات جیسے ہی میں سونے کے لیے لیٹا میں جانتا تھا کہ میں دوبارہ چوری نہیں کروں گا، نہ دادی کے گھر سے، نہ ماں باپ کے گھر سے اور نہ ہی کہیں اور سے۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/11.jpg" /></p>
+<p>کیا پریشانی ہے؟ امی ابو؟ سکیما نے پوچھا۔ سکیما کو پتہ چلا کہ امیر آدمی کا بیٹا غائب ہے۔ وہ آدمی بہت اکیلا اور اُداس ہے۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,12 +186,84 @@
 </section>
 <section class="slide level1">
 
-<h2 id="دادی-کے-کیلے-1">دادی کے کیلے</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/12.jpg" /></p>
+<p>میں اُس کے لیے گا سکتا ہوں۔ ہو سکتا ہے وہ دوبارہ خوش ہو جائے سکیما نے اپنے والدین کو بتایا۔ لیکن اُس کے والدین نے منع کر دیا ۔ وہ بہت امیر ہے اور تم صرف ایک اندھے لڑکے ہو۔ تمہیں لگتا ہے کہ کیا تمہارا گانا اُس کی کوئی مدد کر سکتا ہے؟</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/13.jpg" /></p>
+<p>حتیٰ کہ سکیما نے ہار نہیں مانی۔ اُس کی چھوٹی بہن نے اُسے سہارا دیا اُس نے کہا سکیما کے گانے مجھے سکون بخشتے ہیں جب میں بھوکی ہوتی ہوں۔ یہ اُس کو بھی ضرور راحت دیں گے۔</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/14.jpg" /></p>
+<p>اگلے دن، سکیما نے اپنی چھوٹی بہن سے اُسے اُس امیر آدمی کے گھر تک لے جانے کے لیے کہا۔</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/15.jpg" /></p>
+<p>وہ ایک بڑی کھڑی کے نیچے کھڑا ہو گیا اور اپنا پسندیدہ گانا گانے لگا۔ دھیرے دھیرے، اُس امیر آدمی کا سر کھڑکی سے نظر آنے لگا ۔</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/16.jpg" /></p>
+<p>مزدور رُک گئے جو کام وہ کر رہے تھے۔ اُنہوں نے سکیما کے خوبصورت گانے کو غور سے سُنا، لیکن ایک آدمی نے کہا، ابھی تک کوئی بھی مالک کو حوصلہ نہیں دے پایا ۔ کیا یہ اندھا لڑکا اُسے حوصلہ دے پائے گا؟</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/17.jpg" /></p>
+<p>سیکما نے اپنا گانا ختم کیا اور واپس جانے کے مڑا ۔ لیکن امیر آدمی بھاگتا ہو ا باہر آیا اورکہا مہربانی کر کے دوبارہ گاو۔</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/18.jpg" /></p>
+<p>اُسی لمحے دو آدمی کسی کو سٹریچر پر اُٹھائے لا رہے تھے۔ اُنہیں امیر آٓدمی کا بیٹا زخمی حالت میں سڑک کی بائیں جانب گِرا ہو ا ملا ۔</p>
+<center>
+<strong>17</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/19.jpg" /></p>
+<p>امیر آدمی اپنے بیٹے کو دوبارہ دیکھ کر بہت خوش تھا ۔ اُس نے سکیما کو اُس کی حوصلہ افزائی کے لیے انعام دیا ۔ وہ اپنے بیٹے اور سکیما کو لے کر ہسپتال گیا تاکہ سکیما کی نظر دوبارہ واپس آسکے۔</p>
+<center>
+<strong>18</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="سکیما-کا-گانا-1">سکیما کا گانا</h2>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Peris Wachuka<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/grandma%E2%80%99s-bananas'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/sakima%E2%80%99s-song'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
