--- a/stories/ur/0324_وہ-دن-جب-میں-نے-شہر-کے-لیے-گھر-چھوڑا_slides.html
+++ b/stories/ur/0324_وہ-دن-جب-میں-نے-شہر-کے-لیے-گھر-چھوڑا_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>دادی کے کیلے - Global African Storybook</title>
+  <title>وہ دن جب میں نے شہر کے لیے گھر چھوڑا - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="دادی-کے-کیلے" class="slide level1">
-<h1>دادی کے کیلے</h1>
+<section id="وہ-دن-جب-میں-نے-شہر-کے-لیے-گھر-چھوڑا" class="slide level1">
+<h1>وہ دن جب میں نے شہر کے لیے گھر چھوڑا</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
-<p>دادی کا باغ بہت حیرت انگیز، سورغم، باجرے اور کساوا سے بھرا تھا۔ لیکن اُن سب سے بہترین کیلے تھے۔حالانکہ دادی کے کئی پوتے پوتیاں تھے، لیکن مجھے یہ راز معلوم تھا کہ میں دادی کا سب سے پسندیدہ ہوں۔ وہ اکثر مجھے اپنے گھر پہ مدعو کرتی تھیں۔ وہ مجھے چھوٹے موٹے راز بھی بتاتیں۔لیکن ایک ایسا راز تھا جو اُنہوں نے مجھے نہیں بتایا کہ اُنہوں نے کیلے پکنے کے لیے کہاں رکھے ہیں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
+<p>میرے گاوں کا چھوٹا سا بس سٹاپ لو گوں اور بھری ہوئی بسوں میں مصروف تھا۔ زمین پر رکھنے کے لیے اور بھی سامان مو جود تھا ۔کنڈکٹر اُن جگہوں کا نام چلا کر بتا رہے تھے کہ بسیں کہاں جا رہی ہیں ۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
-<p>ایک دن میں نے دادی کے گھر کے باہر ایک ٹوکری کو سورج کی روشنی میں پڑے ہوئے دیکھا۔ جب میں نے پوچھا کہ یہ کس لیے ہے تو مجھے صرف یہ جو اب ملا کہ یہ میری جادوئی ٹوکری ہے۔ ٹوکری سے آگے کئی کیلوں کے پتے پڑے تھے جو دادی کچھ کچھ دیر بعد پلٹ دیتیں۔ میں تجسس میں تھا کہ یہ پتے کس لیے ہیں؟ مجھے صرف یہ جو اب ملا کہ یہ میرے جادوئی پتے ہیں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
+<p>شہر! شہر! مغرب کی جانب! میں نے ایک کنڈکٹر کو چلاتے ہوئے سُنا ۔ یہ وہی بس تھی جو میں نے پکڑنی تھی۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
-<p>دادی کو، کیلوں کو، کیلوں کے پتوں کو اور اُس بڑی ٹوکری کو دیکھنا بہت دلچسپ تھا۔لیکن دادی نے مجھے امی کے پاس واپس جانے کو کہا۔ دادی میں آپ سے درخواست کرتا ہوں کہ مجھے یہ سب دیکھنے دیں جیسے آپ تیار کر رہی ہیں۔ڈھیٹ مت بنو، بچے، ویسا کرو جیسا تمہیں کہا گیا ہے۔اُن کے اصرار کرنے پر میں بھاگنے لگا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/04.jpg" /></p>
+<p>شہر کی بس تقریباً بھر چکی تھی لیکن مزید لوگ اندر جانے کے لیے ایک دوسرے کو دھکا دے رہے تھے ۔ کچھ لو گوں نے اپنا سامان بس کے نیچے رکھا باقیوں نے اپنا سامان اندر بنے خانوں میں رکھ دیا ۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
-<p>جب میں واپس آیا نہ دادی اور نہ ہی ٹوکری موجود تھی۔ دادی ٹوکری کہاں ہے سارے کیلے کہاں ہیں اور کہاں۔۔۔۔۔۔۔ لیکن مجھے صرف یہ جو اب ملا کہ وہ سب میری جادوئی جگہ میں ہیں۔یہ سب بہت مایوس کن تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/05.jpg" /></p>
+<p>نئے مسافروں نے اپنے ٹکٹ ہاتھوں میں دبائے اور بھری ہوئی بس کا کوئی خالی کونا اپنے لیے ڈھونڈنے لگے جہاں وہ بیٹھ سکیں۔عورتوں اور چھوٹے بچوں نے اُنہیں لمبے سفر کے لیے سکون پہنچایا۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
-<p>دو دن بعد دادی نے مجھے اپنے کمرے سے اپنی چلنے والی لکڑی اُٹھانے کے لیے بھیجا ۔ جلد از جلد میں نے دروازہ کھولا تو خوب پکے ہوئے کیلوں کی خوشبو نے میرا استقبال کیا۔اندرونی کمرے میں دادی کا بڑا جادو تھا جو کہ وہ ٹوکری تھی۔ وہ ایک پرانے کمبل کی مدد سے بہت اچھی طرح چھپائی گئی تھی۔ میں نے اُسے اُٹھایا اور اُس کی بے مثال خوشبو سے محضوز ہوا ۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/06.jpg" /></p>
+<p>میں آگے جا کر ایک کھڑکی کے پاس بیٹھا ۔ میرے آگے بیٹھے آدمی نے سبز رنگ کا ایک پلاسٹک کا تھیلا اپنے ہاتھوں میں دبا رکھا تھا۔اُس نے پرانے جو تے پہنے تھے، ایک پھٹا ہوا کوٹ اور وہ کافی پریشان دکھائی دے رہا تھا ۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
-<p>دادی کی آواز نے مجھے چوکنا کر دیا، تم کیا کر رہے ہو؟ جلدی میری لکڑی لے کر آو۔ میں تیزی سے اُن کی لکڑی لے کر پہنچا ۔ تم کس وجہ سے مسکرا رہے ہوَ؟ دادی نے پوچھا؟ اُن کے اس سوال نے مجھے احساس دلایا کہ میں اب بھی اُن کی جادوئی جگہ کو ایجاد کرنے پر مسکرا رہا ہوں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
+<p>میں نے بس سے باہر دیکھا اور مجھے اس بات کا احساس ہوا کہ میں اپنا گاوں چھوڑ کر جا رہا ہوں،وہ جگہ جہاں میں بڑا ہوا۔میں ایک بڑے شہر جا رہا تھا۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
-<p>اگلے دن جب دادی میری امی سے ملنے آئیں۔ میں بھاگتے ہوئے اُن کے گھر پہنچا تاکہ ایک بار پھر کیلوں کو دیکھ سکوں۔وہاں پر پکے ہوئے کیلوں کا ایک گھچا مو جو د تھا میں نے اُسے اُٹھایا اور اپنے کپڑوں میں چھپا لیا۔ ٹوکری کو دوبارہ ڈھانپنے کے بعد میں گھر کے پیچھے گیا اور جلدی سے کیلے کھا لیے۔آج سے پہلے میں نے اتنے لزیز اور رسیلے کیلے کبھی نہیں کھائے تھے۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/08.jpg" /></p>
+<p>سامان مکمل ہو چکا تھا اور مسافروں نے اپنی اپنی جگہ لے لی تھی۔ سامان بیچنے والے ابھی بھی دھکا دے کر بس کے اندر اپنا سامان بیچنے کی کوشش کر رہے تھے۔ہر کوئی چلا رہا تھا جو چیز اُس کے پاس بیچنے کے لیے موجود تھی۔اُن کے الفاظ میرے لیے مزاحیہ تھے۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
-<p>اگلے دن جب دادی باغ میں سبزی چُن رہی تھیں میں نے کیلوں کو دیکھا۔ تقریباً سب پک چکے تھے۔ چار کیلوں کا ایک گچھا اُٹھائے بغیر مجھ سے رہا نہیں گیا۔ میں آہستہ آہستہ دروازے کی طرف بڑھ رہا تھا تو میں نے دادی کے کھانسنے کی آواز سُنی۔ میں نے کیلوں کو اپنے لباس میں چھپانے کی کو شش کی اور اُن کے پاس سے گزر گیا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/09.jpg" /></p>
+<p>چند مسافروں نے مشروب خریدے باقیوں نے کھانے والی چیزیں اور اُنہیں چبانا شروع ہو گئے۔وہ لوگ جن کے پاس میری طرح پیسہ نہیں تھا صرف دیکھتے رہے۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
-<p>اگلا دن بازار جانے کا دن تھا۔ دادی جلدی اُتھ گئیں۔ وہ ہمیشہ کیلے اور کساوے بازار بیچنے لے جاتیں۔ اُس دن میں اُن سے ملنے کی جلدی میں نہیں تھا لیکن میں اُنہیں زیا دہ دیر کے لیے چھوڑ نہ سکا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/10.jpg" /></p>
+<p>یہ سرگرمیاں بس کے مسلسل ہارن کی وجہ سے متاثر ہو رہی تھیں لیکن یہ ایک نشانی بھی تھی کہ ہم جانے کے لیے تیار ہیں ۔ کنڈکٹر سامان بیچنے والوں پر بہت زور سے چلایا کہ وہ باہر چلے جائیں۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
-<p>اُس شام بعد میں، مجھے میرے امی ابو اور دادی نے بلایا ۔ میں جانتا تھا۔ اُس رات جیسے ہی میں سونے کے لیے لیٹا میں جانتا تھا کہ میں دوبارہ چوری نہیں کروں گا، نہ دادی کے گھر سے، نہ ماں باپ کے گھر سے اور نہ ہی کہیں اور سے۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/11.jpg" /></p>
+<p>سامان بیچنے والے ایک دوسرے کو دھکے دیتے ہوئے بس سے باہر نکلے۔کچھ نے مسافروں کو بقایا دیا جبکہ باقیوں نے آخری وقت میں اپنی چیزیں بیچنے کی کو شش کی۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,12 +186,66 @@
 </section>
 <section class="slide level1">
 
-<h2 id="دادی-کے-کیلے-1">دادی کے کیلے</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/12.jpg" /></p>
+<p>جیسے ہی بس، بس سٹاپ سے نکلی میں نے کھڑکی سے باہر جھنکا، میں نے سوچا کہ کیا کبھی میں دوبارہ گاوں واپس آ پاوں گا۔</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
+<p>جیسے سفر شروع ہوتا گیا، بس کے اندر گرمی شدت اور بڑھ گئی۔ میں نے نیند کی امید کرتے ہوئے اپنی آنکھوں کو بند کر لیا۔</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/14.jpg" /></p>
+<p>لیکن میرا دماغ گھر کی طرف جھکا ۔ کیا میری ماں محفوظ ہوگی؟ کیا میرے خرگوش کوئی پیسہ لا سکیں گے؟ کیا میرا بھائی میرے چھوٹے پودوں کو پانی دے کا؟</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/15.jpg" /></p>
+<p>راستے میں، میں نے اُس جگہ کا نام یا د کیا جہاں بڑے شہر میں میرے چچا رہتے ہیں۔ میں ابھی بھی اُسے بُڑ بڑا رہا تھا جب میری آنکھ لگی۔</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
+<p>نو کھنٹوں بعد میں گاوں کے لیے واپس جانے والی لگائی گئی آوازوں کے شور سے نیند سے بیدار ہوا۔ میں نے اپنا چھوٹا سے بیگ دبوچا اور بس سے باہر چھلانگ لگا دی۔</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/17.jpg" /></p>
+<p>واپس جانے والی بس تیزی سے بھر رہی تھی۔ جلد ہی وہ مشرق کا راستہ اختیار کر لے گی۔ میرے لیے اب سب سے ضروری کام اپنے چچا کے گھر کو ڈھونڈنا تھا۔</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="وہ-دن-جب-میں-نے-شہر-کے-لیے-گھر-چھوڑا-1">وہ دن جب میں نے شہر کے لیے گھر چھوڑا</h2>
+<strong>Text:</strong> Lesley Koyi, Ursula Nafula<br> <strong>Illustrations:</strong> Brian Wambi<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/grandma%E2%80%99s-bananas'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/day-i-left-home-city'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
