--- a/stories/es/0141_el-pollo-y-el-milpiés_slides.html
+++ b/stories/es/0141_el-pollo-y-el-milpiés_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
-<p>Milpiés lanzó el balón e anotó un gol. Milpiés dribló el balón y anotó. Milpiés cabeceó el balón y anotó. Milpiés anotó cinco goles.</p>
+<p>Milpiés lanzó el balón y anotó un gol. Milpiés dribló el balón y anotó. Milpiés cabeceó el balón y anotó. Milpiés anotó cinco goles.</p>
 <center>
 <strong>4</strong>
 </center>
